# kaparser

./: .gitignore  Cargo.toml
docs/: combinators.md
examples/: hex_color.rs
old_codes/: combine.rs  macros.rs  pattern.rs  prelude.rs  tester.rs
old_codes/combine/: not.rs  repeat.rs  seq.rs  special.rs  take.rs
old_codes/pattern/: bin.rs  impls.rs
src/: combine.rs  common.rs  converter.rs  error.rs  extra.rs  helper.rs  input.rs  lib.rs  line_col.rs  macros.rs  marker.rs  parser.rs  parser2.rs  parser_.rs  pattern.rs  precede.rs  predicate.rs  predicates.rs  prelude.rs  primitive.rs  private.rs  proceed.rs  provider.rs  quattrn.rs  slice.rs  stream.rs  tester.rs  tests.rs
src/combine/: alt.rs  alternate.rs  behind.rs  bin.rs  com.rs  compound.rs  control.rs  convert.rs  cut.rs  def.rs  disp.rs  dispatch.rs  fasten.rs  joined.rs  lens.rs  map.rs  modifier.rs  not.rs  opt.rs  parallel.rs  peek.rs  reiter.rs  reiterate.rs  repeat.rs  seq.rs  sequence.rs  skim.rs  special.rs  take.rs  until.rs  winged.rs  with.rs  wrap.rs
src/parser2/: error.rs
src/pattern/: bin.rs  def.rs  impls.rs
tests/: take.rs
