[package]
name = "kaparser"
version = "0.0.1"
edition = "2024"
authors = ["K--Aethiax"]

description = "K--Aethiax's common parser, a procedure oriented parser."

documentation = "https://docs.rs/kaparser"
repository = "https://github.com/eternal-io/kaparser"
license = "MIT OR Apache-2.0"
readme = false

[features]
default = ["std", "unicode"]
std = ["memchr/std", "simdutf8/std"]
unicode = ["dep:unicode-ident", "dep:unicode-segmentation"]

[dependencies]
paste = "1.0.15"
memchr = { version = "2.7.4", default-features = false }
simdutf8 = { version = "0.1.5", default-features = false }
unicode-ident = { version = "1.0.18", optional = true }
unicode-segmentation = { version = "1.12.0", optional = true }
