[package]
name = "kaparser"
version = "0.0.2"
edition = "2024"
authors = ["K--Aethiax"]

description = "An easy-to-use, capture-oriented, combinatorial parsing library with zero-allocation."

documentation = "https://docs.rs/kaparser"
repository = "https://github.com/eternal-io/kaparser"
license = "MIT OR Apache-2.0"
readme = false


[features]
default = ["alloc"]
alloc = []

[dependencies]
paste = "1.0.15"
memchr = "2.7.5"
unicode-ident = "1.0.18"
unicode-segmentation = "1.12.0"
